--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -1,6 +1,6 @@
 main {
     height: calc(100vh - 50px);
-    min-height: calc(100vh- 50px);
+    min-height: calc(100vh - 50px);
     padding-top: 60px;
 }
 
@@ -9,5 +9,5 @@ footer {
 }
 
 .bg-home {
-    background-color: #1e90ff;
+    background-color: #FFFFF0;
 }
