--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>新規登録</h2>
+<h2>Sign Up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -33,11 +33,11 @@
   
   <div class="field">
     <%= f.label :age %><br />
-    <%= f.text_field :age, autofocus: true%>
+    <%= f.text_field :age, autofocus: true%>歳
   </div>
-  
+
   <div class="field">
-    <%= f.label :type %><br />
+    <%= f.label :type, "Pet type 例:いぬ、ねこ※ひらがなで入力してね" %><br />
     <%= f.text_field :type, autofocus: true%>
   </div>
 
