--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -13,12 +13,10 @@ footer {
 }
 
 .navbar-brand {
-  display     : inline-block;
-  font-size   : 160%;
-  font-weight : bold;
-  color       : #ffffff;
-  text-shadow:  2px  2px 10px #777 ,
-               -2px  2px 10px #777 ,
-                2px -2px 10px #777 ,
-               -2px -2px 10px #777;
+    font-size: 30px;
+    font-weight: bold;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: orange;
+    -webkit-text-fill-color: white;
+    text-shadow: 5px 3px 0 orange;
 }
