--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,42 @@
-<div class="container">
-<h2 class="form-title">アカウント情報編集 <%= resource_name.to_s.humanize %></h2>
-<div class="row">
-<div class="col-md-offset-3 form-wrapper">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+<h2>edit</h2>
 
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :name, "Pet name" %><br />
+    <%= f.text_field :name, autofocus: true%>
+  </div>
+  
+  <div class="gender">
+    <%= f.label :gender, "Pet gender" %><br />
+    <%= f.label :♂ %>
+    <%= f.radio_button :gender, :♂ %>
+    <%= f.label :♀ %>
+    <%= f.radio_button :gender, :♀ %>
+    <%= f.label :other %>
+    <%= f.radio_button :gender, :other %>
+</div>
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(変更したい場合)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
   
   <div class="field">
     <%= f.label :age %><br />
-    <%= f.text_field :age, autofocus: true %>
+    <%= f.text_field :age, autofocus: true%>歳
   </div>
-  
+
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type, autofocus: true %>
+    <%= f.label :animal_type, "Pet type 例:いぬ、ねこ※ひらがなで入力してね" %><br />
+    <%= f.text_field :animal_type, autofocus: true%>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
-</div>
-</div>
-</div>
+<%= render "devise/shared/links" %>
