--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,8 @@
         <li class="nav-item">
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
+        <li><%= link_to "Users", users_path %></li>
+        <li class="dropdown">
 <%# ログインしていないのなら下記を表示 %>
       <% else %>
         <li class="nav-item">
