--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 <h1>Users</h1>
 
 <div class="search-form">
-  <%= form_with(scope: :search, url: users_path, method: :get, local: true) do |f| %>
+   <%= form_with(scope: :search, url: user_session_path, method: :get, local: true) do |f| %>
     <div class="field">
       <%= f.label(:name, User.human_attribute_name(:name)) %>
       <%= f.text_field :name, value: @search_params[:name] %>
