--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -4,8 +4,12 @@ main {
     padding-top: 60px;
 }
 
+
 footer {
     height: 50px;
+        position: fixed;
+        width: 100%;
+
 }
 
 .bg-home {
