--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,7 +11,7 @@
     <body>
         <%= render "layouts/header" %>
         <%= render "layouts/flash" %>
-        <main class="bg-home d-flex align-items-center w-100 h-100">
+        <main class="test bg-home d-flex align-items-center w-100 h-100">
             <div class="container">
                 <%= yield %>
             </div>
