--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -4,3 +4,9 @@
     background-color:rgba(0,153,255,0.1);
     background-blend-mode:lighten;
 }
+
+input[type="f.text"] {
+        width: 30px;
+        height: 40px;
+    }
+
