--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: article, local: true) do |form| %>
+<!--ｴﾗｰがあったときのｴﾗｰ内容表示-->
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -10,13 +11,13 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+<!--値入力と送信ﾎﾞﾀﾝの部分-->
+  <div class="field form-group">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class:"form-control" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
