--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,3 +2,6 @@
 <%= link_to 'New Article', new_article_path %>
 <!--render partial: 'articles/article.html.erb', locals: { article: @articles }のこと-->
 <%= render @articles %>
+
+
+<%= paginate @articles %>
