--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,14 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
-     <!--以下を追記　Font Awesome読み込み-->
+    <!--以下を追記　Font Awesome読み込み-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+    <!-- カスタマイズ用CSS -->
+    <link rel="stylesheet" media="screen" href="/xxx/public/stylesheets/bootstrap-custom.css">
+    <link rel="stylesheet" media="screen" href="/xxx/public/stylesheets/my.css">
+    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
