061111:59投稿者link修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,8 @@
 <!--ログインしたユーザーIDと投稿したユーザーIDが同じなら-->
- <h1>about me</h1>
+ <h1>about user</h1>
 
 <h3>ユーザー名</h3>
 <%= @user.name %>
-<h3>メールアドレス</h3>
-<%= @user.email %>
 <h3>age</h3>
 <%= @user.age %>
 <h3>gender</h3>
