--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,12 +6,12 @@
     
     <!--ログインしたユーザーIDと投稿したユーザーIDが同じなら-->
     <% if user_signed_in? && current_user.id == article.user_id %>
-    <%= link_to article.user.name,users_myprofile_path %>
-    <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-primary" %>
-    <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
-    <% else %>
+      <%= link_to article.user.name,users_myprofile_path %>
+      <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-primary" %>
+      <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
+      <% else %>
     <!--投稿者の表示 -->
-    <%= link_to article.user.name,users_show_path %>
+      <%= link_to(article.user.name,"/users/#{article.user.id}") %>
     <% end %> 
   </div>
 </div>
