--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,4 @@
 <h3>animal_type</h3>
 <%= @user.animal_type %>
 
-<%= link_to '自分の登録一覧へ', mypage_index_path %>
+<%= link_to @user.name + "さんの投稿一覧へ", "/users/articles/#{@user.id}" %>
