--- a/app/views/articles/otherIndex.html.erb
+++ b/app/views/articles/otherIndex.html.erb
@@ -1,14 +1,19 @@
 <h1>さんの投稿一覧へ</h1>
+<% @articles.each do |article| %>
 <div class="card mb-3">
+  
   <div class="card-body">
+    
  
-<h5 class="card-title"><% @articles.each do |article| %>
+<h5 class="card-title">
+  
     <%= article.title %></h5>
-    <% end %>
+    
     
 
     </div>
 </div>
+<% end %>
 
  
 
