--- a/app/views/articles/otherIndex.html.erb
+++ b/app/views/articles/otherIndex.html.erb
@@ -1,20 +1,10 @@
-<h1>さんの投稿一覧へ</h1>
+<h1><%= @user.name %>さんの投稿一覧</h1>
 <% @articles.each do |article| %>
-<div class="card mb-3">
-  
-  <div class="card-body">
-    
- 
-<h5 class="card-title">
-  
-    <%= article.title %></h5>
-    
-    
-
+  <div class="card mb-3">
+    <div class="card-body">
+      <h5 class="card-title">
+  　  <%= article.title %></h5>
     </div>
-</div>
+  </div>
 <% end %>
-
- 
-
 <%= paginate @articles %>
