--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,15 +4,26 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav mr-auto">
+      
+     
 <%# もしユーザーがログインしているならば下記を表示 %>
       <%  if user_signed_in?  %>
         <li class="nav-item">
+        <a class="nav-link" href="/articles/new">つぶやく<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users">ユーザー一覧</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/articles">投稿一覧</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/myprofile">my page</a>
+        </li>
+        <li class="nav-item">
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
-        
-        
-        <li class="dropdown">
 <%# ログインしていないのなら下記を表示 %>
       <% else %>
         <li class="nav-item">
