--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,21 @@
   </head>
 
   <body>
+    
     <%= render "layouts/header" %>
     <%= render "layouts/flash" %>
+    
+    <main>
+      <div class="container">
+        <%= yield %>
+      </div>
+    </main>
+    <footer class="py-3 bg-light">
+      <div class="container">
+        <span class="text-muted small">Simple Board by Ruby on Rails & Bootstrap 4</span>
+      </div>
+    </footer>
+
     <div id="modalArea"></div>
     <main>
       <div class="container-fruid h-100 p-2 d-flex flex-column">
