--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,12 +11,18 @@
       </ul>
     </div>
   <% end %>
+  
+  
 <!--値入力と送信ﾎﾞﾀﾝの部分-->
   <div class="field form-group">
     <%= form.label :title %>
     <%= form.text_field :title, class:"form-control" %>
   </div>
-
+  <!-- 画像のｱｯﾌﾟﾛｰﾄﾞ-->
+  <%= form_for @article do |f| %>
+      <%= f.label :image 'iamge' %>
+      <%= f.file_field :image %>
+    <% end %>
 <%= form.label(:public, for: nil, class:'article-status__label') do %>
       <%= form.radio_button :status, :public %>
       <%= I18n.t('activerecord.attributes.article.statuses.public') %>
