--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,10 @@
 <h3>animal_type</h3>
 <%= @user.animal_type %>
 
+<!--ﾌﾟﾛﾌｨｰﾙ画像の表示-->
+<% if @user.icon? %>
+  <%= image_tag @user.image.url %>
+<% else %>
+  <%= image_tag "default.jpg" %>
+<% end %>
 <%= link_to @user.name + "さんの投稿一覧へ", "/users/articles/#{@user.id}" %>
