--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,7 +34,11 @@
     <%= f.text_field :animal_type, autofocus: true%>
   </div>
   
-  
+  <% if @user.icon? %>
+  <%= image_tag @user.image.url %>
+<% else %>
+  <%= image_tag "default.jpg" %>
+  <% end %>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
