--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>edit</h2>
+<h2>profile編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -34,11 +34,16 @@
     <%= f.text_field :animal_type, autofocus: true%>
   </div>
   
-  <% if @user.icon? %>
-  <%= image_tag @user.image.url %>
-<% else %>
-  <%= image_tag "default.jpg" %>
-  <% end %>
+  <div class="circle-icon">
+    <% if current_user.persisted? && current_user.icon? %>
+      <%= image_tag current_user.icon.to_s %>
+      <label><%= f.check_box :remove_icon %> 画像を削除</label>
+    <% else %>
+      <%= image_tag 'default.jpg' %>
+      <%= f.hidden_field :icon_cache %>
+    <% end %>
+      <%= f.file_field :avatar %>
+  </div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
