--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to 'New Article', new_article_path %>
 <!--render partial: 'articles/article.html.erb', locals: { article: @articles }のこと-->
 <!--articlesフォルダのパーシャル _article.html.erb を呼び出してね-->
-<!--その画面のローカル変数 articleには インスタンス変数(オブジェクト)の @articlesを渡してね-->
+<!--その画面のローカル変数 article(単数)には インスタンス変数(オブジェクト)の @articlesを渡してね-->
 <%= render @articles %>
 
 
