--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,15 +14,18 @@
       <% end %> 
       
 <!--いいね処理-->      
-      <h3>いいね件数: <%= @artcile.likes.count %></h3>
-      <% if current_user.already_liked?(@article) %>
-        <%= button_to 'いいねを取り消す', article_like_path(@article), method: :delete %>
-      <% else %>
-        <%= button_to 'いいね', article_likes_path(@article) %>
-      <% end %>
+      <h3>いいね件数: <%= @article.likes.count %></h3>
+        <!--いいねをしている時-->
+        <% if current_user.already_liked?(@article) %>
+          <%= button_to 'いいねを取り消す', like_path(@article), method: :delete %>
+        <!--いいねをしていない時-->  
+        <% else %>
+          <%= button_to 'いいね', likes_path(@article) %>
+        <% end %>
       <h2>いいねしたユーザー</h2>
         <% @article.liked_users.each do |user| %>
-      <% end %>
+ 
+        <% end %>
 <!--ここまで-->
   </div>
 </div>
