--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,18 +14,11 @@
       <% end %> 
       
 <!--いいね処理-->      
-      <h3>いいね件数: <%= @article.likes.count %></h3>
-        <!--いいねをしている時-->
-        <% if current_user.already_liked?(@article) %>
-          <%= button_to 'いいねを取り消す', like_path(@article), method: :delete %>
-        <!--いいねをしていない時-->  
-        <% else %>
-          <%= button_to 'いいね', likes_path(@article) %>
-        <% end %>
-      <h2>いいねしたユーザー</h2>
-        <% @article.liked_users.each do |user| %>
- 
-        <% end %>
+      <% if Like.find_by(user_id: current_user.id, article_id: @article.id) %>
+ 　      <%= link_to("いいね","/likes/#{@article.id}/destroy", {method: "article"}) %>
+      <% else %>
+        <%= link_to("いいねを取り消す","/likes/#{@article.id}/create", {method: "article"}) %>
+      <% end %>
 <!--ここまで-->
   </div>
 </div>
