--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,15 +14,14 @@
       <% end %> 
       
 <!--いいね処理-->
-      <% if Like.find_by(user_id: current_user.id, post_id: @post.id) %>
-　<%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
-    　<span class="fa fa-heart like-btn-unlike"></span>
- <% else %>
- 　<%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
-       <span class="fa fa-heart like-btn"></span>
-     <% end %>
-  
      
+      <% if Like.find_by(user_id: current_user.id, article_id: @article.id) %>
+ 　      <%= link_to("いいね","/likes/#{@article.id}/destroy", {method: "article"}) %>
+ 　     <span class="fa fa-heart like-btn-unlike"></span>
+      <% else %>
+        <%= link_to("いいねを取り消す","/likes/#{@article.id}/create", {method: "article"}) %>
+        <span class="fa fa-heart like-btn"></span>
+      <% end %>
 <!--ここまで-->
   </div>
 </div>
