--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,11 +16,13 @@
 <!--いいね処理-->
      
       <% if Like.find_by(user_id: current_user.id, article_id: @article.id) %>
- 　      <%= link_to("いいね","/likes/#{@article.id}/destroy", {method: "article"}) %>
- 　     <span class="fa fa-heart like-btn-unlike"></span>
+ 　      <%= link_to("/likes/#{@article.id}/destroy", {method: "article"}) do %>
+ 　         <span class="fa fa-heart like-btn-unlike"></span>
+ 　      <% end %>
       <% else %>
-        <%= link_to("いいねを取り消す","/likes/#{@article.id}/create", {method: "article"}) %>
-        <span class="fa fa-heart like-btn"></span>
+        <%= link_to("/likes/#{@article.id}/create", {method: "article"}) do %>
+           <span class="fa fa-heart like-btn"></span>
+        <% end %>
       <% end %>
 <!--ここまで-->
   </div>
