--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,6 +24,9 @@
            <span class="fa fa-heart like-btn"></span>
         <% end %>
       <% end %>
+      
+      <!-- 変数@likes_countを表示してください -->
+      <%= @likes_count %>
 <!--ここまで-->
   </div>
 </div>
