--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
     <%= f.text_field :animal_type, autofocus: true%>
   </div>
   
-  <div class="field">
+  <div class="field circle-icon ">
     <%= f.label :icon %><br/>
       <img src=<%= @user.icon %> class = "icon_image">
     <%= f.file_field :icon, id: :icon_img %>
